--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,21 @@ task clean(type: Delete) {
 }
 
 ext {
+    minSdkVersion = 15
+    targetSdkVersion = 23
+    compileSdkVersion = 23
+    buildToolsVersion = '23.0.2'
+
     supportLibraryVersion = '23.1.1'
     butterKnifeVersion = '7.0.1'
+    commonsLangVersion = '3.4'
+
     jUnitVersion = '4.12'
     mockitoVersion = '1.10.19'
     powerMockito = '1.6.2'
     hamcrestVersion = '1.3'
+
+    runnerVersion = '0.4.1'
+    rulesVersion = '0.4.1'
+    espressoVersion = '2.2.1'
 }
