--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ ext {
     supportLibraryVersion = '23.1.1'
     butterKnifeVersion = '7.0.1'
     commonsLangVersion = '3.4'
+    greenDaoVersion = '2.0.0'
 
     jUnitVersion = '4.12'
     mockitoVersion = '1.10.19'
