--- a/generator/build.gradle
+++ b/generator/build.gradle
@@ -2,5 +2,6 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "de.greenrobot:greendao-generator:$rootProject.ext.greenDaoVersion"
+    compile project (":DaoGenerator")
+//    compile "de.greenrobot:greendao-generator:$rootProject.ext.greenDaoVersion"
 }
