Added some typefaces and source to handle them. First draft of character list fragment implemented. Fixed bug with autogenerated virtues. Brought in parent class for Views from MVP, as mentioned by Santiago Vidal. Modified ValuesAdapter to use a layout provided via parameter.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile "com.jakewharton:butterknife:$rootProject.ext.butterKnifeVersion"
     compile "org.apache.commons:commons-lang3:$rootProject.ext.commonsLangVersion"
     compile "de.greenrobot:greendao:$rootProject.ext.greenDaoVersion"
+    compile "com.squareup:otto:$rootProject.ext.ottoVersion"
 
     testCompile "junit:junit:$rootProject.ext.jUnitVersion"
     testCompile "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
