--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,12 @@ ext {
     compileSdkVersion = 23
     buildToolsVersion = '23.0.2'
 
-    supportLibraryVersion = '23.2.0'
+    supportLibraryVersion = '24.0.0-alpha1' // 23.2.0
     butterKnifeVersion = '7.0.1'
     commonsLangVersion = '3.4'
     greenDaoVersion = '2.0.0'
     wizardroidVersion = '1.3.0'
+    ottoVersion = '1.3.5'
 
     jUnitVersion = '4.12'
     mockitoVersion = '1.10.19'
