--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ ext {
     greenDaoVersion = '2.0.0'
     wizardroidVersion = '1.3.0'
     ottoVersion = '1.3.5'
+    gsonVersion = '2.6.2'
 
     jUnitVersion = '4.12'
     mockitoVersion = '1.10.19'
