--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ ext {
     wizardroidVersion = '1.3.0'
     ottoVersion = '1.3.5'
     gsonVersion = '2.6.2'
+    realmVersion = '0.84.1'
 
     jUnitVersion = '4.12'
     mockitoVersion = '1.10.19'
