--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -10,6 +11,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -32,8 +34,12 @@ dependencies {
     compile "de.greenrobot:greendao:$rootProject.ext.greenDaoVersion"
 //    compile "com.squareup:otto:$rootProject.ext.ottoVersion"
     compile "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
-    compile ("io.realm:realm-android:$rootProject.ext.realmVersion") {
+    compile ("io.realm:realm-gradle-plugin:$rootProject.ext.realmVersion") {
+        transitive = true
         exclude module: 'support-annotations'
+        exclude module: 'asm'
+//        exclude module: 'asm-tree'
+//        exclude module: 'asm-analyzer'
     }
 
     testCompile "junit:junit:$rootProject.ext.jUnitVersion"
@@ -57,4 +63,6 @@ dependencies {
 
 configurations.all {
     resolutionStrategy.force "com.android.support:support-annotations:$rootProject.ext.supportLibraryVersion"
+    resolutionStrategy.force 'org.javassist:javassist:3.20.0-GA'
+    resolutionStrategy.force 'com.squareup:javawriter:2.5.0'
 }
