--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0-beta6'
-
+        classpath "io.realm:realm-gradle-plugin:0.88.2"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -35,7 +35,7 @@ ext {
     wizardroidVersion = '1.3.0'
     ottoVersion = '1.3.5'
     gsonVersion = '2.6.2'
-    realmVersion = '0.84.1'
+    realmVersion = '0.88.2'
 
     jUnitVersion = '4.12'
     mockitoVersion = '1.10.19'
