--- a/build.gradle
+++ b/build.gradle
@@ -29,15 +29,15 @@ ext {
     compileSdkVersion = 23
     buildToolsVersion = '23.0.2'
 
-    supportLibraryVersion = '24.0.0-alpha1' // 23.2.0
+    supportLibraryVersion = '24.0.0-alpha1'
     butterKnifeVersion = '7.0.1'
     commonsLangVersion = '3.4'
-//    greenDaoVersion = '2.0.0'
     wizardroidVersion = '1.3.0'
     ottoVersion = '1.3.5'
     gsonVersion = '2.6.2'
     realmVersion = '0.88.2'
     realmRecyclerViewVersion = '0.9.14'
+    calligraphyVersion = '2.2.0'
 
     jUnitVersion = '4.12'
     mockitoVersion = '1.10.19'
