--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,7 @@ dependencies {
     compile "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
     compile "com.github.thorbenprimke:realm-recyclerview:$rootProject.ext.realmRecyclerViewVersion"
     compile "uk.co.chrisjenx:calligraphy:$rootProject.ext.calligraphyVersion"
-    compile 'com.squareup:otto:1.3.8'
-
+    compile "com.squareup:otto:$rootProject.ext.ottoVersion"
 
     testCompile "junit:junit:$rootProject.ext.jUnitVersion"
     testCompile "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
