--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ ext {
     realmVersion = '0.88.2'
     realmRecyclerViewVersion = '0.9.14'
     calligraphyVersion = '2.2.0'
+    guavaVersion = '19.0'
 
     jUnitVersion = '4.12'
     mockitoVersion = '1.10.19'
