--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ app/build/intermediates/
 .idea/
 app/build/outputs/apk/app-debug.apk
 app/build/*
+gradle/wrapper/gradle-wrapper.jar
+gradle/wrapper/gradle-wrapper.properties
+gradlew
+gradlew.bat
