--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ ext {
     ottoVersion = '1.3.8'
     gsonVersion = '2.6.2'
     realmVersion = '0.91.0'
+    realmAdaptersVersion = '1.2.1'
     realmRecyclerViewVersion = '0.9.14'
     calligraphyVersion = '2.2.0'
     guavaVersion = '19.0'
