--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ ext {
     minSdkVersion = 17
     targetSdkVersion = 23
     compileSdkVersion = 23
-    buildToolsVersion = '23.0.2'
+    buildToolsVersion = '23.0.3'
 
     supportLibraryVersion = '24.0.0-alpha1'
     butterKnifeVersion = '7.0.1'
@@ -40,6 +40,7 @@ ext {
     realmRecyclerViewVersion = '0.9.16'
     calligraphyVersion = '2.2.0'
     guavaVersion = '19.0'
+    easyRulesVersion = '2.2.0'
 
     jUnitVersion = '4.12'
     mockitoVersion = '1.10.19'
