--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.android.tools.build:gradle:2.1.2'
-        classpath "io.realm:realm-gradle-plugin:1.0.0"
+        classpath "io.realm:realm-gradle-plugin:1.2.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -29,15 +30,15 @@ ext {
     compileSdkVersion = 23
     buildToolsVersion = '23.0.3'
 
-    supportLibraryVersion = '24.0.0-alpha1'
-    butterKnifeVersion = '7.0.1'
+    supportLibraryVersion = '24.1.1'
+    butterKnifeVersion = '8.4.0'
     commonsLangVersion = '3.4'
     wizardroidVersion = '1.3.0'
     ottoVersion = '1.3.8'
-    gsonVersion = '2.6.2'
-    realmVersion = '1.0.0'
-    realmAdaptersVersion = '1.2.1'
-    realmRecyclerViewVersion = '0.9.16'
+    gsonVersion = '2.7'
+    realmVersion = '1.2.0'
+    realmAdaptersVersion = '1.3.0'
+    realmRecyclerViewVersion = '0.9.23'
     calligraphyVersion = '2.2.0'
     guavaVersion = '19.0'
     easyRulesVersion = '2.2.0'
